<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

<string name="search" />
<string name="share" />
    <string name="new_rate_dialog_title">Rate Me!</string>
    <string name="new_rate_dialog_message">If you enjoy playing this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="new_rate_dialog_never">Never</string>
    <string name="new_rate_dialog_later">Later</string>
    <string name="new_rate_dialog_ok">Rate</string>
<string name="search_hint">Search</string>
    <string name="app_label">Search....</string>
    <string name="enter_search_keyword_here">Type Keyword...</string>
    <string name="settting">Settting</string>
    <string name="information_display">thhr</string>
    <string name="x">X</string>
    <string name="b"><![CDATA[>>]]></string>
<string name="action_about">About the App</string>
<string name="action_help">Home</string>
<string name="title_activity_help" />
<string name="colorPrimary">yoo</string>
<string name="send_message">Send Message</string>
<string name="email_us">Send Email</string>
<string name="communicate">Talk To a Counselor</string>
<string name="adolescence">Adolescence</string>
<string name="hiv_communication_with_children">HIV communication with Children</string>
<string name="hiv_communication_with_caregivers">HIV communication with CareGivers</string>
<string name="publications" />
<string name="hiv_research" />
<string name="youth_networks" />
<string name="support_group" />
<string name="appointment_reminder" />
<string name="call">Call</string>
<string name="all_about_keeping_fit" />
<string name="hiv_and_life" />
<string name="be_informed_be_factual_stop_stigma_know_your_status_live_a_positive_life">BE INFORMED | BE FACTUAL | STOP STIGMA | KNOW YOUR STATUS | LIVE A POSITIVE LIFE</string>
    <string name="hiv_overview">HIV OVERVIEW</string>
    <string name="healthy_living">HEALTHY LIVING</string>
    <string name="hiv_testing_and_treatment">HIV TESTING and TREATMENT</string>
    <string name="transmission_and_prevention">TRANSMISSION and PREVENTION</string>
    <string name="disclosure">DISCLOSURE</string>
    <string name="adolescenceS">ADOLESCENCE</string>
    <string name="relationships">RELATIONSHIPS</string>
    <string name="todo">TODO</string>
    <string name="appointment_reminders">Appointment Reminder</string>
    <string name="private_hospitals">Private Hospitals</string>
    <string name="public_hospitals">Public Hospitals</string>
    <string name="hiv_and_sex">HIV and SEX</string>
    <string name="hiv_and_pregnancy">HIV and Pregnancy</string>
    <string name="hiv_and_tb">HIV and TB</string>
    <string name="hiv_and_family">HIV and FAMILY</string>
    <string name="family_planning">FAMILY PLANNING and CONTRACEPTIVES </string>
    <string name="gender_and_gender_identity">GENDER and GENDER IDENTITY</string>
    <string name="sex_and_sexuality">SEX and SEXUALITY</string>
    <string name="consent">SEXUAL CONSENT</string>
    <string name="teenage_pregnancy">TEENAGE PREGNANCY</string>
    <string name="stages_of_hiv_what_is_art_cd4_cells">Stages of HIV, What is ART?, CD4 Cells</string>
    <string name="condoms_and_lubricants_nutrition_opportunistic_infections_alcohol_smoking_immunization_sleep">Condoms and Lubricants, Nutrition, Opportunistic Infections, Alcohol, Smoking, Immunization, Sleep</string>
    <string name="testing_viral_load_cd4_side_effects_adherence_drug_interaction_resistance">Testing, Viral Load, CD4, Side Effects, Adherence, Drug Interaction, Resistance</string>
    <string name="prep_pep_abstinence_circumcision_risk_sexual_behaviour">PrEP, PEP, Abstinence, Circumcision, Risk Sexual Behaviour</string>
    <string name="tb_overview_tb_symptoms_tb_diagnosis_tb_tb_treatment">TB Overview, TB Symptoms, TB Diagnosis, TB TB Treatment</string>
    <string name="conception_hiv_and_pregnancy_mother_to_child_transmission_support_for_family_and_childtrent">Conception, HIV and Pregnancy, Mother-to-Child-Transmission, Support for Family and Childtrent</string>
    <string name="hiv_communication_with_children_hiv_communication_with_caregivers">HIV communication with Children , HIV communication with CareGivers</string>
    <string name="general_parentchild_romantic_sexual">General, ParentChild, Romantic, Sexual</string>
    <string name="safer_sex_relationship_with_negatives_stis">Safer Sex, Relationship with Negatives, STIs</string>
    <string name="go_to_bmainpage">Facts About HIV</string>
    <string name="twit">Twitter</string>
    <string name="sexs">Sexual Orientation</string>
    <string name="quee">Queer</string>
    <string name="q">Asexuality</string>
    <string name="se">Sexual and Reproductive Control</string>
    <string name="rt">Sexually Health</string>
    <string name="retry">Reload</string>
    <string name="welcome_to_hivfactsheet">Welcome to HIVFactSheet</string>
    <string name="we_provide_comprehensive_factual_information_about_hiv_and_reproductive_health">We provide Comprehensive Factual Information about HIV and Reproductive Health</string>
    <string name="facts_about_hiv">Facts about HIV</string>
    <string name="click_here">Click here</string>
    <string name="reproductive_health">Reproductive Health</string>
    <string name="Appointment_reminder">Appointment Reminder</string>
    <string name="talk_to_a_counselor">Talk to a Counselor??</string>
</resources>

