<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@mipmap/bg"
    android:layout_height="match_parent">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            android:theme="@style/ThemeOverlay.AppTheme.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppTheme.PopupMenu">
            <com.HIVFactsheet.ScrollingTextview
                android:id = "@+id/title"
                android:textColor = "@color/colorAccentsss"
                android:textSize="20sp"
                android:layout_width = "wrap_content"
                android:marqueeRepeatLimit="1"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textStyle="bold"
                android:layout_height = "wrap_content" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:id="@+id/linear"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <com.HIVFactsheet.ScrollingButton
        android:id="@+id/button11"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/button"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/adolescence"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:backgroundTint="?android:attr/colorMultiSelectHighlight" />
    <com.HIVFactsheet.ScrollingButton
        android:id="@+id/button12"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button11"
        android:layout_alignStart="@+id/button11"
        android:layout_below="@+id/button11"
        android:layout_marginTop="70dp"
        android:background="@drawable/button"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/hiv_communication_with_children"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:backgroundTint="?android:attr/colorMultiSelectHighlight"/>
    <com.HIVFactsheet.ScrollingButton
        android:id="@+id/button13"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button12"
        android:layout_alignStart="@+id/button12"
        android:layout_below="@+id/button12"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="false"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/hiv_communication_with_caregivers"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:backgroundTint="?android:attr/colorMultiSelectHighlight" />
    </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
    </android.support.v4.widget.NestedScrollView>
    </android.support.v7.widget.LinearLayoutCompat>
</RelativeLayout>